--- a/appmanifest.json
+++ b/appmanifest.json
@@ -1,6 +1,6 @@
 ﻿{
-	"name": "MemeGames",
-	"short_name": "MemeGames",
+	"name": "LAFire",
+	"short_name": "LAFire",
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "portrait",
